[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypsf"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyparsing",
    "blosc"
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
psfinfo = "pypsf.tools.psfinfo:main"

[tool.setuptools]
packages = ["pypsf"]
